test/mustConsumeNonLifted.slq
def nonConst(y:ğ”¹){
	if X(y){ // error
		phase(Ï€);
	}
}
